log
Wed 20 Mar 2024 08:07:32 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
8070734
Wed 20 Mar 2024 08:09:11 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
4149458
Wed 20 Mar 2024 08:13:06 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
ad12b0a
Wed 20 Mar 2024 08:24:30 PM UTC: 
 exercises.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  3|2
total_score: 40/70
452faf4
Wed 20 Mar 2024 08:26:33 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
a3c6971
Wed 20 Mar 2024 08:50:23 PM UTC: 
 exercises.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  7|1
total_score: 60/70
cc6be84
Wed 20 Mar 2024 08:56:01 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:155:5: error: ‘contador’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  155 |   if(contador == 0)
      |     ^
cc1: all warnings being treated as errors
Compilation failed
209258b
Wed 20 Mar 2024 08:56:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
339e993
Wed 20 Mar 2024 08:57:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
ccb945b
